Fix scrollbar overlapping with navbar

--- a/NotD-Aftermath-Web/src/app/app.component.scss
+++ b/NotD-Aftermath-Web/src/app/app.component.scss
@@ -1,6 +1,5 @@
 .app-frame {
-    height: 100%;
-    overflow: auto;
+    min-height: 100%;
 }
 
 .content {
